# BinaryNeuralAcid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_graphviewer.sh  config.ini.sample  graphviewer.pro  reversehash.pro  reversehashd.pro  test_sum.js  wsjcpp.yml
bna/: bna.pro
bna/src/: helpers.cpp  helpers.h  main.cpp
bna/src/bna/: bna.cpp  bna.h
bna/src/server/: reversehashd_server.cpp  reversehashd_server.h  server.pri  training_thread.cpp  training_thread_item.cpp  training_thread_message.cpp
bna/src/tests/: bnaoper_test.cpp  bnaoper_test.h  brut_test.cpp  ireversehashtest.h  learning_test.cpp  learning_test.h  random_mutations_test.cpp  readwrite_test.h  reverse_test.cpp  tests.pri
bna1/: bna  build_mac.sh
bna1/src/: main.cpp
bna1/src/tests/: brut_test.cpp  brut_test.h  callout_test.cpp  callout_test.h  learning_test.cpp  random_mutations_test.cpp  readwrite_test.cpp  reverse_test.cpp  reverse_test.h  tests.cpp  tests.h
etc/init.d/: reversehashd
etc/reversehashd/: conf.ini
examples/image_conversion/html/: index.html
examples/sdl_sin/: CMakeLists.txt
examples/sdl_sin/src/: main.cpp
examples/sdl_sin/src/render/: app_state.h  render.cpp  render_window.cpp  render_window.h
examples/sin/: CMakeLists.txt
examples/sin/src/: bna_test_sin.cpp  bna_test_sin.h  main.cpp
examples/sin1/: CMakeLists.txt
examples/sin1/src/: bna_test_sin1.cpp
examples/sum/: CMakeLists.txt  test_sum.cpp  test_sum.js
examples/sum/src/: main.cpp
graphpainter/: .gitignore  README.md  build.sh  graphpainter.pro
graphpainter/src/: graph.cpp  graph.h  main.cpp  widget.cpp  widget.h
misc/neural_network_python/: sin_test.py
misc/old/bna1/: bna.qrc
misc/web/: index.html
misc/web/images/: connecting.xcf
misc/web/js/: bna-render.js
misc/web/statistics/: index.html
misc/web/visualizer/: index.html
neural_network/: md5_test.py
report/: index.html
res/: md5revert_helpers.cpp  md5revert_helpers.h  md5revert_main.cpp
reversehash/: build.sh  reversehash.pro
reversehash/src/: graph.cpp  helpers.h  line.cpp  main.cpp  memory.cpp  memory.h  memoryitem.cpp  vertex_graph.cpp  vertex_graph.h
reversehash/src/interfaces/: ivertex_out.h
reversehash/src/operations/: and.cpp  xor.cpp
reversehash/src/ui/: widget.cpp
reversehash/src/vertexes/: vertex.cpp  vertex.h  vertex_in.cpp  vertex_in.h
src/: argument_processor_main.cpp  argument_processor_main.h  binary_neural_acid.cpp  binary_neural_acid.h  bna.cpp  bna.h  bna_expression.cpp  bna_group.h  bna_operations.cpp  bna_operations.h  bna_test_sin.cpp  bna_test_sin.h  bna_types.cpp  bna_types.h  graph.h  graphviewer.cpp  helpers.cpp  helpers.h  line.h  main.cpp  memory.cpp  memoryitem.cpp  memoryitem.h  upload.cpp  upload.h  vertex_graph.cpp  vertex_graph.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/nlohmann_json/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_arguments/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_hashes/: wsjcpp.hold.yml
src/bna/: bna.cpp  bna.h  bna.pri  vertex_graph.h
src/bna/include/: bna.h  bna_expr.h  bna_item.h  bna_opers.h  bna_var.h
src/bna/interfaces/: ioperation.h  ivertex_in.h  ivertex_operation.h  ivertex_out.h
src/bna/operations/: and.cpp  or.cpp  xor.cpp
src/bna/sources/: bna.cpp  bna_expr.cpp  bna_item.cpp  bna_opers.cpp  bna_var.cpp
src/bna/vertexes/: vertex_in.cpp
src/core/: binary_neural_acid.cpp  binary_neural_acid.h  bna.cpp  bna.h  bna_expression.cpp  bna_expression.h  bna_group.cpp  bna_group.h  bna_nodes.cpp  bna_nodes.h  bna_operations.h  bna_types.cpp  bna_types.h
src/interfaces/: ioperation.h  ivertex_in.h  ivertex_operation.h  ivertex_out.h  iwebsocketserver.h
src/memory/: memory.cpp  memory.h  memory.pri  memoryitem.cpp  memoryitem.h
src/operations/: and.h  or.cpp  or.h  xor.h
src/render/: render.cpp  render.h  render_window.cpp  render_window.h
src/server/: reversehashd_server.cpp  reversehashd_server.h  server.pri  training_thread.cpp  training_thread.h  training_thread_item.cpp  training_thread_item.h  training_thread_message.cpp  training_thread_message.h  websocketserver.cpp  websocketserver.h
src/server/cmd_handlers/: cmd_graph_handler.cpp  cmd_hello_handler.cpp  cmd_reverse_handler.cpp  cmd_statistics_handler.cpp  cmd_training_handler.cpp  create_cmd_handlers.cpp  create_cmd_handlers.h
src/test_sin/: bna_test_sin.cpp  bna_test_sin.h  bna_test_sin1.cpp  bna_test_sin1.h
src/tests/: callout_test.cpp  changerandomoperation_test.cpp  changerandomoperation_test.h  clonecopy_test.cpp  clonecopy_test.h  learning_test.cpp  random_add_vertex_test.cpp  random_add_vertex_test.h  random_connect_free_vertex_test.cpp  random_connect_free_vertex_test.h  random_mutations_test.cpp  random_mutations_test.h  random_remove_vertex_test.cpp  random_remove_vertex_test.h  readwrite_test.cpp  reverse_test.cpp  swaprandomvertexins_test.cpp  swaprandomvertexins_test.h  tests.cpp  tests.pri
src/ui/: widget.h
src/vertexes/: vertex.cpp  vertex.h  vertex_in.cpp  vertex_in.h
tests/: CMakeLists.txt  test_bna_oper.cpp  test_call_out.cpp  test_chars.cpp  test_convertors.cpp  test_learning.cpp  test_md5.cpp  test_operation_and.cpp  test_operation_not_xor.cpp  test_operation_or.cpp  test_operation_xor.cpp  test_operations.cpp  test_operations_bit.cpp  test_operations_char.cpp  test_random_modify.cpp  test_read_write.cpp  test_remove_all_deadlock_nodes.cpp
unit-tests.wsjcpp/: .gitignore  CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_bna_oper.cpp  unit_test_bna_oper.h  unit_test_brute.cpp  unit_test_brute.h  unit_test_call_out.cpp  unit_test_call_out.h  unit_test_learning.cpp  unit_test_learning.h  unit_test_operation_and.cpp  unit_test_operation_not_xor.cpp  unit_test_operation_or.cpp  unit_test_operation_xor.cpp  unit_test_random_mutation.cpp  unit_test_random_mutation.h  unit_test_read_write.cpp  unit_test_read_write.h  unit_test_reverse_test.cpp  unit_test_reverse_test.h
web/: index.html  index1.html
web/css/: index.css
web/js/: bna-render.js  index.js  reversehashd.api.js  statistics.js
www/: config.php.ini  index.php  upload.php
(+34 files in other folders)
